k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: kibana-ingress
spec:
  rules:
    - host: https://6f25fd99-eb39-4b12-a6b7-cd082a259706.eu-central-1.linodelke.net:443
      http:
        paths:
          - path: /* 
            pathType: Prefix
            backend:
              service:
                name: kibana-kibana
                port:
                  number: 5601
